# 3-python-package-push-then-pull

./: Pipfile  README.md  demo.py  note  pyproject.toml  r.txt  requirements.txt
.github/workflows/: build.yml  build_and_test.yml  build_mac.yml  build_win.yaml  build_without_pipenv.yaml  test.yaml  test2.yaml
src/popmessage/: __init__.py  popmsg.py
tests/: test_popmsg.py
