[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popmessage"
version = "0.0.1"  # bumpver will update this automatically
authors = [
  { name="Maya Humston", email="mayahumston@gmail.com" },
  { name="Jessica Chen", email="jhc10024@nyu.edu" }
]
description = "A package that allows developers to create popup messages to aid in debugging and add some spice into their coding process."
readme = "README.md"
keywords = ["popup", "debugging", "notifications", "GUI", "Kivy"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "kivy[base]"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/software-students-spring2025/3-python-package-push-then-pull/"
Issues = "https://github.com/software-students-spring2025/3-python-package-push-then-pull/issues"

[bumpver]
current_version = "0.0.1"
version_pattern = "{MAJOR}.{MINOR}.{PATCH}"
commit_message = "Bump version to {new_version}"
tag_message = "v{new_version}"

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{MAJOR}.{MINOR}.{PATCH}"'
]
