[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popmessage"
version = "0.0.4"
authors = [
  { name="Maya Humston", email="mayahumston@gmail.com" },
  { name="Shamaamah Ahmad", email="shamaamah.ahmad@gmail.com" },
  { name="Jessica Chen", email="author@example.com" },
  { name="Catherine Huang", email="author@example.com" },

]
description = "A package that allows developers to create popup messages to aid in debugging and add some spice into their coding process."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "kivy[base]",
  "kivy_examples",
  "pytest"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://github.com/software-students-spring2025/3-python-package-push-then-pull/"
Issues = "https://github.com/software-students-spring2025/3-python-package-push-then-pull/issues"

